--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
     "name": "triage-list",
     "version": "1.0.0",
     "description": "Chart containing waiting room and patient rooms",
-    "main": "index.js",
+    "main": "server/server.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "export NODE_ENV=development; nodemon server/index.js"
+        "build": "webpack",
+        "dev": "NODE_ENV=development webpack serve --open & nodemon server/index.js"
     },
     "repository": {
         "type": "git",
@@ -18,19 +19,36 @@
     },
     "homepage": "https://github.com/Akim97/triage-list#readme",
     "dependencies": {
-        "@babel/core": "^7.21.4",
-        "@babel/preset-env": "^7.21.4",
         "@babel/preset-react": "^7.18.6",
-        "babel-loader": "^9.1.2",
-        "css-loader": "^6.7.3",
+        "cors": "^2.8.5",
         "eslint": "^8.39.0",
         "express": "^4.18.2",
         "nodemon": "^2.0.22",
+        "pg": "^8.10.0",
+        "postgres": "^3.3.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-table": "^7.8.0",
         "sass-loader": "^13.2.2",
         "sequelize": "^6.31.0",
         "sqlite3": "^5.1.6",
         "style-loader": "^3.3.2"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.21.4",
+        "@babel/preset-env": "^7.21.4",
+        "babel-loader": "^9.1.2",
+        "css-loader": "^6.7.3",
+        "html-webpack-plugin": "^5.5.1",
+        "nodemon": "^2.0.22",
+        "postcss": "^8.4.23",
+        "postcss-loader": "^7.2.4",
+        "react-router-dom": "^6.10.0",
+        "sass": "^1.62.0",
+        "sass-loader": "^13.2.2",
+        "style-loader": "^3.3.2",
+        "webpack": "^5.80.0",
+        "webpack-cli": "^5.0.2",
+        "webpack-dev-server": "^4.13.3"
     }
 }
