--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "homepage": "https://github.com/Akim97/triage-list#readme",
     "dependencies": {
         "@babel/preset-react": "^7.18.6",
+        "axios": "^1.3.6",
         "cors": "^2.8.5",
         "eslint": "^8.39.0",
         "express": "^4.18.2",
